Fix score details div visibility
Fixes #82

--- a/src/views/Game/Players.styl
+++ b/src/views/Game/Players.styl
@@ -41,10 +41,7 @@
         flex-direction: column;
         //width: 18.8em;
         //min-width: 9.0rem ;
-        flex-grow: 1;
-        flex-shrink: 0;
-        flex-basis: 49%;
-        overflow: hidden;
+        width: 49%;
 
         box-sizing: border-box;
 
